--- a/src/main/resources/templates/account/accountDetail.html
+++ b/src/main/resources/templates/account/accountDetail.html
@@ -28,6 +28,18 @@
                             </form>
                         </div> <!-- btnZone 끝 -->
 
+                        <div class="time">
+                            <li>
+                                <th:block th:if="${accountDto.acUpdate}==null">
+                                    <span th:text="${#temporals.format(accountDto.acCreate, 'yyyy-MM-dd HH:mm:ss')}"></span>
+                                </th:block>
+
+                                <th:block th:unless="${accountDto.acUpdate}==null">
+                                    <span th:text="${#temporals.format(accountDto.acUpdate, 'yyyy-MM-dd HH:mm:ss')}"></span>
+                                </th:block>
+                            </li>
+                        </div><!-- time 끝 -->
+
                         <div class="title-zone">
                             <li>
                                 <input type="text" th:field="*{acTitle}" readonly>
@@ -42,9 +54,9 @@
                                 <input type="text" th:field="*{acSurplus}" placeholder="이월금" readonly>원
                             </li>
                         </div><!-- title-zone 끝 -->
-                        
+
                         <li class="li1">
-                            <span>◆ 수입 지출 내역</span>
+                            <span class="title-sub">◆ 수입 지출 내역</span>
                         </li>
 
                         <div class="income-expend">
@@ -54,26 +66,23 @@
                                     <th width="20%">수입</th>
                                     <th width="20%">지출</th>
                                 </tr>
-    
+
                                 <tr>
                                     <td width="60%" th:text="${accountDto.acContent}"></td>
                                     <td width="20%" th:text="${accountDto.acIncome}"></td>
                                     <td width="20%" th:text="${accountDto.acExpend}"></td>
-<!--                                     <td width="70%"><input type="text" th:field="*{acContent}" readonly></td>
-                                    <td width="15%"><input type="text" th:field="*{acIncome}" readonly></td>
-                                    <td width="15%"><input type="text" th:field="*{acExpend}" readonly></td> -->
                                 </tr>
                             </table>
                         </div><!-- inncome-expend 끝 -->
 
                         <li class="li1">
-                            <span>◆ 결산 내역</span>
+                            <span class="title-sub">◆ 결산 내역</span>
                         </li>
 
                         <div class="income-expend-sum">
                             <li>
                                 <h5>수입 총액</h5>
-                                <input type="text" placeholder="원" readonly>
+                                <input type="text" readonly th:value="${accountDto.acTotalIncome}">
                             </li>
 
                             <li>
@@ -82,14 +91,14 @@
 
                             <li>
                                 <h5>지출 총액</h5>
-                                <input type="text" placeholder="원" readonly>
+                                <input type="text" readonly th:value="${accountDto.acTotalExpend}">
                             </li>
                         </div><!-- income-expend-sum 끝 -->
 
                         <div class="sum">
                             <li>
                                 <h5>총 잔액</h5>
-                                <input type="text" placeholder="총 금액" readonly>
+                                <input type="text" readonly th:value="${accountDto.acTotalPay}">
                             </li>
                         </div><!-- sum 끝 -->
 
