--- a/src/main/resources/static/css/common/leftMenu.css
+++ b/src/main/resources/static/css/common/leftMenu.css
@@ -63,8 +63,8 @@
   content: "■";
   display: block;
   position: absolute;
-  right: 0;
-  top: 1px;
+  right: 10px;
+  top: 13px;
   color: #000000;
 }
 
@@ -90,4 +90,25 @@
 
 .left-menu .left-con .dash-board .menu>ul>li ul.sub li a{
   font-size: inherit;
+}
+
+/* 날씨정보 */
+
+.weather{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  font-size: 15px;
+  padding: 10px;
+  box-sizing: border-box;
+  background-color: #ebf6ff;
+}
+
+.weather .title{
+  font-weight: bold;
+}
+
+.weather .desc {
+  text-align: center;
 }
